src/components/Resume/resume.scss
@import '../../styles/variables.scss';

.resume {
  background-color: $white;
  color: $color1;
  font-family: $inconsolata-font-family;
  width: 100%;
}

.resume-container {
  margin: 0 auto;
  max-width: 900px;
  padding: 20px 0;
  width: 70%;
}

.header {
  margin-bottom: 25px;
}

.back-home {
  position: absolute;
  top: 70px;
  left: 10%;
  text-decoration: none;
  font-size: 24px;
}

.sub-headline {
  border-bottom: 1px solid $color1;
  display: inline-block;
  font-weight: 600;
  font-size: 14px;
  text-transform: uppercase;
  margin: 20px 0;
  padding: 0 0 5px;
}

.headline {
  display: inline-block;
  font-size: 36px;
  margin: 10px 0 0 20px;
  vertical-align: top;

  a {
    color: $color1;
    text-decoration: none;

    &:hover {
      color: $color2;
      text-decoration: underline;
    }
  }
}

.hidden-text {
  left: -9999px;
  position: absolute;
  top: -9999px;
}

.email-link,
.link {
  display: block;
  font-size: 24px;
  font-weight: normal;
  margin: 5px 0;
}

.link svg {
  margin-left: 5px;
  margin-bottom: -3px;
}

.summary-paragraph {
  font-size: 16px;
  line-height: 18px;
  margin: 0 0 5px;
}

.resume-img {
  border: 2px solid $color1;
  border-radius: 25%;
  display: inline-block;
  max-width: 120px;
  min-height: 110px;
  min-width: 110px;
  padding: 2px;
  width: 15%;
}

.main-section {
  .sub-headline {
    margin: 5px 0;
  }
}

.skills-education-wrapper {
  display: flex;
  margin-top: 25px;
  gap: 25px;
}

.skills-container {
  display: flex;
  flex-flow: wrap;
  border: 1px solid $black;
  border-radius: 3px;
  padding: 25px;
}

.skills-title {
  flex: 1 0 100%;
  margin-bottom: 20px;
}

.skills-wrapper,
.job-wrapper {
  margin: 20px 0;
  padding: 0;

  &:last-child {
    margin-bottom: 0;
  }

  h4,
  h5 {
    margin: 10px 0 8px;
  }

  h4 {
    font-size: 16px;
    font-weight: 600;
  }

  h5 {
    font-size: 15px;
  }

  li {
    font-size: 13px;
    line-height: 20px;
    list-style: none;
    text-decoration: none;
    
    strong {
      font-weight: 700;
    }
  }
}

.education-container {
  padding: 25px;
}

.tooltip-target-css,
.tooltip-target-javascript {
  appearance: none;
  background-color: $inherit;
  border: none;
  color: $color1;
  font-family: inherit;
  font-size: inherit;
  padding: 0;
  text-align: left;

  .open {
    display: block;
  }
}

.tooltip-target-css:hover,
.tooltip-target-javascript:hover {
  cursor: pointer;

  & .title {
    border-bottom: 1px solid $color1;
    text-align: left;
  }
}

.tooltip-target-css:focus,
.tooltip-target-javascript:focus {
  outline: none;
}

.tooltip {
  border: 1px solid $color1;
  border-radius: 2px;
  color: $color1;
  display: none;
  margin: 5px 0;
  padding: 5px 8px;

  li {
    line-height: 15px;
  }
}

.job-link {
  color: $color1;
  text-decoration: none;

  &:hover {
    color: $color2;
    text-decoration: underline;
  }
}

.skills-wrapper {
  flex: 1 0 50%;
  margin: 0;
}

.cool-fact {
  background-color: $color1;
  color: $white;
  border-radius: 4px;
  padding: 2px 4px;
  font-size: 10px;
}

.footer {
  display: flex;
  gap: 10px;
  justify-content: center;
  margin: 50px 0;
}

.footer-button {
  display: inline-block;

  a {
    border: 2px solid $color5;
    border-radius: 3px;
    color: $color5;
    font-size: 12px;
    font-weight: 700;
    padding: 10px 30px;
    text-decoration: none;
  }

  a:hover {
    background: $color5;
    color: $white;
  }
}

@media print {
  .resume-container {
    max-width: 1000px;
  }

  .hide-for-print,
  .cool-fact,
  .footer {
    display: none;
  }
}

@media screen and (max-width: 970px) {
  .resume-container {
    width: 80%;
  }
}

@media screen and (max-width: 720px) {
  .resume-container {
    width: 85%;
  }
}

@media screen and (max-width: $mobile) {
  .resume-container {
    width: 90%;
  }

  .headline {
    font-size: 32px;
    margin-left: 0;
  }
}

